adding join and leave the club
